--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
             
 
             </nav>
-            <div class="menu-movil" id="hamburguesa">
-                <button>
-                    <span class="arriba"></span>
-                    <span class="medio"></span>
-                    <span class="abajo"></span>
-                </button>
-            </div>
         </div>
     </div>
 
@@ -42,7 +35,7 @@
             <div class="contenido-logo">
             </div>
             <div class="contenido-texto" data-aos="flip-up">
-                <h1>SISTEMA DE REPORTE DE SEGURIDAD OPERACIONAL SMS - AEROBK, C.A.</h1>
+                <h1>SISTEMA DE REPORTE DE SEGURIDAD OPERACIONAL SMS AEROBK, C.A.</h1>
                 <div class="contenedor-boton">
                     <a href="index2.html" class="boton-primario btn-cabezera azul">Reporte Voluntario &rtrif;</a>
                 </div>
