--- a/index2.1.html
+++ b/index2.1.html
@@ -66,7 +66,7 @@
             
             </div>
             <input type="submit" value="Enviar" class="btn" />
-            <input type="hidden" name="access_key" value="adf7be34-8d64-433e-96be-393badca38af">
+            <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
           </form>
         </div>
       </div>
